--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,9 +27,10 @@ body{
     position: relative;
     width: 100px;
     height: 110px;
-    margin: 1px;
+    margin: 2px;
     transition: 2s;
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    background-color: rgb(24, 24, 24);
     &:hover{
         background: #0f0;
         transition: 0s;
@@ -37,8 +38,7 @@ body{
 }
 
 .row:nth-child(even){
-    margin-left: 1px;
-
+    margin-left: 2px;
 }
 
 @keyframes anim{
